# genai-projects

./: .gitignore  README.md  pyproject.toml
resume_analyzer/: package-lock.json  package.json
resume_analyzer/api/: main.py  routers.py
resume_analyzer/api/core/: settings.py
resume_analyzer/api/services/: analyzer.py
resume_analyzer/app/: page.tsx
resume_analyzer/app/(home)/: page.tsx
resume_analyzer/components/: Review.tsx
resume_analyzer/components/forms/: ResumeUploadForm.tsx
resume_analyzer/services/: analyze.service.ts
search_with_documents/: main.py  routes.py  schemas.py  settings.py
search_with_documents/rag/: __init__.py  generation.py  indexing.py  preprocessor.py
search_with_documents/ui/: index.html  script.js
